rnsc/test_data/integration/error/parser/type_hints/long/overflow_recovers.rns
.class @long 99999999999999999999
unexpected_token ; <- this error should be reported as well
